# AI-way-2-Vacation

./: .gitignore  README.md  add_location_data_column.py  main.py  migrate_database.py  pyproject.toml  requirements.txt  setup.py  start.py  streamlit_app.py  test_api.py  travel_planner.db
agent/: agentic_workflow.py
alembic/: env.py
alembic/versions/: 90e5d5f3952b_initial_sqlite_schema.py  add_conversation_history_to_travel_plans.py  add_location_data_to_travel_plans.py
api/: auth.py  dependencies.py  legacy_routes.py  models.py
api/routes/: admin_routes.py  auth_routes.py  auth_routes_fixed.py  directions_routes.py  favorites_routes.py  map_routes.py  places.py  plans_routes.py  public_routes.py  user_routes.py
config/: config.yaml
core/: config.py  logging_config.py
database/: __init__.py  base.py  crud.py  models.py  schemas.py
notebook/: experiments.ipynb
output/: AI_Trip_Planner_2025-09-30_13-32-33.md  AI_Trip_Planner_2025-09-30_13-32-49.md  AI_Trip_Planner_2025-10-24_10-07-14.md  AI_Trip_Planner_2025-10-30_12-19-58.md  AI_Trip_Planner_2025-10-30_12-24-25.md  AI_Trip_Planner_2025-10-30_12-33-46.md  AI_Trip_Planner_2025-10-30_12-46-07.md
prompt_library/: prompt.py
tests/: conftest.py  test_api.py  test_places.py
tools/: expense_calculator_tool.py  place_search_tool.py  weather_info_tool.py
utils/: model_loader.py  save_to_document.py
